# on-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.on
OnLibraries/Std/: CMakeLists.txt
OnLibraries/Std/include/: std.h
OnLibraries/Std/src/: std.cpp
example/: main.on
include/: OLDdefinitions.h  OLDexceptions.h  OLDinterperter.h  OLDtypes.h  commands.h  definitions.h  exceptions.h  interpreter.h  syntax.h  types.h  utils.h
src/: BuildConfig.h  BuildConfig.h.in  Interperter.cpp  OLDmain.cpp  interpreter.cpp  interpreter.h  main.cpp  parser.cpp  stringUtils.cpp  stringUtils.h  syntax.h  utils.cpp
